--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true,
+    "node": true
+
   },
   "parserOptions": {
     "ecmaVersion": 2018,
@@ -8,7 +11,7 @@
   },
   "extends": "eslint:recommended",
   "rules": {
-    "no-console": "warn",
-    "import/extensions": 0
+    "no-console": "warn"
+/*     "import/extensions": 0 */
   }
 }
