--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "eslint": "^8.3.0",
     "gh-pages": "^3.1.0",
     "htmlhint": "^1.0.0",
-    "jest": "^27.0.1",
+    "jest-environment-jsdom": "^28.1.3",
     "opener": "^1.5.1",
     "serve": "^14.0.1"
   },
   "engines": {
     "node": ">=14.x"
+  },
+  "devDependencies": {
+    "jest": "^28.1.3"
   }
 }
-
